test_samples/invalid/invalid_version.zarr/.zattrs
{
    "multiscales": [
        {
            "version": "abc123",
            "axes": [
                {
                    "name": "y",
                    "type": "space"
                },
                {
                    "name": "x",
                    "type": "space"
                }
            ],
            "datasets": [
                {
                    "coordinateTransformations": [
                        {
                            "scale": [
                                1.0,
                                1.0
                            ],
                            "type": "scale"
                        }
                    ],
                    "path": "0"
                }
            ]
        }
    ]
}
